# agent-plugin-builder

./: .cruft.json  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  build_plugin.py  pyproject.toml  vulture_allowlist.py
agent_plugin_builder/: __init__.py  __main__.py  agent_plugin_build_options.py  agent_plugin_builder.py  agent_plugin_builder_arguments.py  build_agent_plugin.py  build_options.py  build_plugin.py  compare_package_lists.py  platform_dependency_packaging_method.py  plugin_archive_generation.py  plugin_manifest.py  plugin_schema_generation.py  setup_build_plugin_logging.py  vendor_dir_generation.py  vendor_dirs.py
docker/: Dockerfile  README.md  build.sh
tests/: conftest.py  test_agent_plugin_build_options.py  test_agent_plugin_builder_arguments.py  test_build_agent_plugin.py  test_plugin_archive_generation.py  test_plugin_manifest.py  test_plugin_schema_generation.py  test_setup_build_plugin_logging.py  test_vendor_dir_generation.py
tests/data_for_tests/: manifest.yaml  manifest.yml  plugin_options.py  pyproject.toml  requirements_common_not_possible.txt  requirements_common_possible.txt  requirements_without_hashes.txt
tests/data_for_tests/mock-exploiter/: manifest.yaml  pyproject.toml
tests/data_for_tests/mock-exploiter/mock_exploiter/: mock_options.py  plugin.py
